# order-service-v2

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflow/: ci.yaml
.github/workflows/: cd.yaml  ci.yaml
src/: main.py
src/application/dtos/: customer_dto.py  order_dto.py  order_item_dto.py
src/application/events/: order_events.py
src/application/mappers/: order_mapper.py
src/application/services/: order_query_service.py  order_service.py
src/domain/aggregates/: order_aggregate.py
src/domain/entities/: customer.py  order.py  order_item.py
src/domain/exceptions/: domain_exceptions.py
src/domain/ports/input/: order_query_port.py  order_service_port.py
src/domain/ports/output/: event_publisher_port.py  inventory_service_port.py  order_repository_port.py
src/domain/value_objects/: delivery_address.py  order_total.py
src/infrastructure/adapters/input/api/: error_handler.py  order_controller.py  order_router.py  schemas.py
src/infrastructure/adapters/output/messaging/: kafka_event_publisher.py
src/infrastructure/adapters/output/repositories/: order_repository.py
src/infrastructure/adapters/output/services/: inventory_service.py
src/infrastructure/config/: settings.py
src/infrastructure/db/: session.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/models/: order_model.py
tests/unit/application/: test_order_query_service.py  test_order_service.py
tests/unit/domain/: test_value_objects.py
tests/unit/infrastructure/: test_order_repository.py
(+1 files in other folders)
