[project]
name = "order-service-v3-arch-hex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "pydantic[email]>=2.11.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "aiokafka>=0.12.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pytest",
    "pytest-cov"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
